--- a/resume7-2.html
+++ b/resume7-2.html
@@ -20,7 +20,7 @@
                 <!-- Tablet-sized image (head and shoulders) -->
                 <source media="(min-width: 768px)" srcset="headshoulders.jpg">
                 <!-- Mobile-sized image (face) -->
-                <img src="headshoulders.jpg" alt="Profile Picture" class="profile-image">
+                <img src="ZAMMTO224_FTC2306_GROUPB_ZAMATOLOMTOLO_ITW7-2/face.jpg" alt="Profile Picture" class="profile-image">
             </picture>
             <h1>Zamatolo Mtolo</h1>
         </div>
