--- a/resume7-2.html
+++ b/resume7-2.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<<!DOCTYPE html>
 <html>
 <head>
     <title>Zamatolo Mtolo - Resume</title>
@@ -15,12 +15,9 @@
     <header>
         <div id="top" class="hero">
             <picture>
-                <!-- Laptop-sized image (original) -->
                 <source media="(min-width: 1024px)" srcset="fullength.jpg">
-                <!-- Tablet-sized image (head and shoulders) -->
                 <source media="(min-width: 768px)" srcset="headshoulders.jpg">
-                <!-- Mobile-sized image (face) -->
-                <img src="ZAMMTO224_FTC2306_GROUPB_ZAMATOLOMTOLO_ITW7-2/face.jpg" alt="Profile Picture" class="profile-image">
+                <img src="face.jpg" alt="Profile Picture" class="profile-image">
             </picture>
             <h1>Zamatolo Mtolo</h1>
         </div>
@@ -68,7 +65,7 @@
                     <li>Coordinating and liaising with internal and external stakeholders</li>
                     <li>Drafting, editing, and proofreading correspondence, reports, and presentations</li>
                     <li>Maintaining and organizing files, records, and confidential information</li>
-                    <li>Screening and managing phone calls, emails, and other communications</li>
+                    <li>Screening and managingphone calls, emails, and other communications</li>
                     <li>Handling expense reports, invoices, and financial documentation</li>
                     <li>Providing general administrative support and office management</li>
                     <li>Maintaining confidentiality and handling sensitive information appropriately</li>
